--- a/src/stylesheets/Fill.scss
+++ b/src/stylesheets/Fill.scss
@@ -1,6 +1,9 @@
 @import './core/variables';
 @import './base/reset.scss';
 
+
+.text-error {color:red}
+
 .hiddenJS{  /* he creado una clase diferente para este input concreto */
     display:none;
 } 
