--- a/src/stylesheets/Share.scss
+++ b/src/stylesheets/Share.scss
@@ -53,7 +53,13 @@
         }
     }
 
+    .create-card-button:disabled {
+        background: grey !important;
+        pointer-events: none;
+    }
+
 }
+
 
 .created-container {
     margin-left: auto;
