fetch-in-progress-avatar-in-progress

--- a/src/stylesheets/Share.scss
+++ b/src/stylesheets/Share.scss
@@ -28,7 +28,7 @@
             color: $secondaryColor;
             background-color: white;
 
-            a {
+            p {
                 color: $secondaryColor;
             }
 
@@ -38,7 +38,7 @@
 
         }
 
-        a {
+         p {
             text-transform: uppercase;
             font-family: $mainText;
             font-weight: 500;
