clean-comments-sass

--- a/src/stylesheets/Design.scss
+++ b/src/stylesheets/Design.scss
@@ -8,6 +8,8 @@
 }
 .newHidden {display: none;}
 
+//Palettes Design Collapsable
+
 .palettesContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
