--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -2,6 +2,8 @@
 @import './base/reset.scss';
 @import './core/mixins';
 
+//Header
+
 .header-image-container {
     width: 100%;
     height: auto;
