--- a/src/stylesheets/LandingPage.scss
+++ b/src/stylesheets/LandingPage.scss
@@ -3,7 +3,7 @@
 @import './base/reset.scss';
 @import './core/mixins';
 
-//ESTRUCTURA GENERAL ------------------------------------------------------------------
+//General Structure
 
 .landingPage{
     height: 100vh;
