--- a/src/stylesheets/Preview.scss
+++ b/src/stylesheets/Preview.scss
@@ -1,7 +1,7 @@
 @import "./core/variables";
 @import "./core/mixins";
 
-// Estilos de Design radio Palettes into Card Design.
+// Styles Design radio Palettes into Card Design.
 
 .infoStyle1 {
   border-left: 5px solid $palete1Color2;
