--- a/src/stylesheets/ProfilePage.scss
+++ b/src/stylesheets/ProfilePage.scss
@@ -5,43 +5,49 @@
 $buttonFont: $mainText;
 $nameFont: $previewText;
 
-//ESTRUCTURA GENERAL ------------------------------------------------------------------
-.profilePage{
+//General structure
+.profilePage {
     height: 100vh;
     width: 100vw;
-    .allPageHeader{
+
+    .allPageHeader {
         height: 110px;
         width: 100vw;
         background-color: #FFFFFF;
     }
-    .profilePageBody{
+
+    .profilePageBody {
         height: calc(100vh - 170px);
         overflow: scroll;
         width: 100%;
         background: linear-gradient(to bottom, #f5f5f5, #ffffff 11%);
-        @include forTablet{
+
+        @include forTablet {
             padding: 20px 40px;
             display: grid;
             grid-template-columns: 329px 1fr;
             grid-template-rows: 1fr;
             grid-gap: 30px;
-            .grid-1{
+
+            .grid-1 {
                 background: transparent;
                 grid-column: 1/2;
                 grid-row: 1/2;
             }
-            .grid-2{
+
+            .grid-2 {
                 grid-column: 2/3;
-                grid-row: 1/2;  
-                border-radius: 5px;  
+                grid-row: 1/2;
+                border-radius: 5px;
             }
         }
-        @include forPc{
-        grid-template-columns: 30vw 1fr;
-        }        
+
+        @include forPc {
+            grid-template-columns: 30vw 1fr;
+        }
     }
 
-    .allPageFooter{
+    .allPageFooter {
         height: 60px;
         width: 100vw;
         background-color: #FFFFFF;
@@ -49,41 +55,43 @@ $nameFont: $previewText;
     }
 }
 
-//ESTILOS FORMS BOX ------------------------------------------------------------------
-.formList{
+//Styles form box
+.formList {
     height: 100%;
     min-height: 457px;
     width: 100%;
-    /* border:1px solid black; */
+
 
     .form {
         font-family: $mainText;
         background: linear-gradient(to bottom, #f5f5f5, #ffffff 9%);
         padding: 30px 27px;
-    
+
         a {
             font-family: $mainText;
             text-decoration: none;
         }
-    
+
         .form__icon {
             color: $secondaryColor;
             margin-right: 10px;
-           
+
         }
-    
-        .form__arrow--design, .form__arrow--fill, .form__arrow--share {
+
+        .form__arrow--design,
+        .form__arrow--fill,
+        .form__arrow--share {
             color: $primaryColor;
             border: none;
             background-color: transparent;
             font-weight: lighter;
             font-size: $mainTitleSize;
         }
-    
+
         .form__arrow--collapse {
             transform: rotate(180deg);
         }
-    
+
         .form__title {
             font-family: $mainText;
             font-weight: 600;
@@ -92,29 +100,31 @@ $nameFont: $previewText;
             color: $primaryColor;
             margin: 10px 0;
         }
-    
-    
+
+
         .form__open {
             padding-bottom: 20px;
         }
-    
+
         .form__sections {
             border-bottom: 1px solid $borderLineColor;
         }
     }
-    
+
 }
 
-//ESTILOS PREVIEW BOX ------------------------------------------------------------------
-.cardPreview{
+//Styles Preview box
+.cardPreview {
     position: relative;
     height: 100%;
     min-height: 457px;
     width: 100%;
     background: linear-gradient($previewBackground1, $previewBackground2);
-    &__centeredBox{
+
+    &__centeredBox {
         @include centerAll;
-        .previewResetButton{
+
+        .previewResetButton {
             width: 75px;
             height: 30px;
             background-color: transparent;
@@ -128,68 +138,72 @@ $nameFont: $previewText;
             color: $previewTextColor;
             margin-bottom: 20px;
         }
-        .card{
+
+        .card {
             width: 240px;
             height: 329px;
             background-color: white;
             padding-top: 21px;
             padding-bottom: 12px;
-            box-shadow: 0 1px 10px 0 $shadowColor;  
-            .card__profileInfo--box{
-                // border-left: 5px solid $palete1Color2;
+            box-shadow: 0 1px 10px 0 $shadowColor;
+
+            .card__profileInfo--box {
+
                 width: 100%;
                 height: 42px;
                 padding-left: 15px;
                 margin-bottom: 10px;
-                .card__profileInfo--name{
+
+                .card__profileInfo--name {
                     font-family: $nameFont;
                     font-weight: 700;
                     font-size: 18px;
                     line-height: 20px;
-                    // color: $palete1Color1;
-                    margin-bottom: 2px;                
+                    margin-bottom: 2px;
                 }
-                .card__profileInfo--job{
+
+                .card__profileInfo--job {
                     font-family: $nameFont;
                     font-weight: 400;
                     font-size: 16px;
-                    // color: $previewTextColor;
                     line-height: 20px;
                 }
             }
-            .card__avatar--box{
+
+            .card__avatar--box {
                 width: 100%;
                 height: 200px;
                 background-color: $previewBackground2;
-                // background-image: url(./../images/default-avatar.gif);
                 background-position: center;
                 background-size: cover;
-                margin-bottom: 10px;              
+                margin-bottom: 10px;
             }
-            .card__socialbuttons--list{
+
+            .card__socialbuttons--list {
                 padding-left: 20px;
                 list-style: none;
                 display: flex;
                 flex-direction: row;
                 justify-content: flex-start;
-                align-items: center;            
-                .card__socialbuttons--box{
+                align-items: center;
+
+                .card__socialbuttons--box {
                     display: inline-block;
                     position: relative;
                     width: 32px;
                     height: 32px;
                     border-radius: 50%;
-                    // border: 2px solid $palete1Color3;
                     margin-right: 10px;
-                    // color: $palete1Color1;
+
                     .hidden {
                         display: none;
-                      }      
+                    }
+
                     .icon {
-                      @include centerAll;
-                      font-size: 18px;
-                    //   color: $palete1Color1;
-                    }              
+                        @include centerAll;
+                        font-size: 18px;
+
+                    }
                 }
             }
         }
