--- a/src/stylesheets/layout/ProfilePage.scss
+++ b/src/stylesheets/layout/ProfilePage.scss
@@ -10,7 +10,13 @@ $nameFont: $previewText;
     .allPageHeader {
         height: 110px;
         width: 100vw;
-        background-color: #FFFFFF;
+        background-color: #ffffff;
+
+        .page_header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     }
 
     .profilePageBody {
@@ -47,7 +53,7 @@ $nameFont: $previewText;
     .allPageFooter {
         height: 60px;
         width: 100vw;
-        background-color: #FFFFFF;
+        background-color: #ffffff;
         border-top: solid 1px $borderLineColor;
     }
 }
@@ -57,7 +63,6 @@ $nameFont: $previewText;
     height: 100%;
     min-height: 457px;
     width: 100%;
-
 
     .form {
         font-family: $mainText;
@@ -72,7 +77,6 @@ $nameFont: $previewText;
         .form__icon {
             color: $secondaryColor;
             margin-right: 10px;
-
         }
 
         .form__arrow--design,
@@ -98,7 +102,6 @@ $nameFont: $previewText;
             margin: 10px 0;
         }
 
-
         .form__open {
             padding-bottom: 20px;
         }
@@ -107,7 +110,6 @@ $nameFont: $previewText;
             border-bottom: 1px solid $borderLineColor;
         }
     }
-
 }
 
 //Styles Preview box
@@ -145,7 +147,6 @@ $nameFont: $previewText;
             box-shadow: 0 1px 10px 0 $shadowColor;
 
             .card__profileInfo--box {
-
                 width: 100%;
                 height: 42px;
                 padding-left: 15px;
@@ -199,7 +200,6 @@ $nameFont: $previewText;
                     .icon {
                         @include centerAll;
                         font-size: 18px;
-
                     }
                 }
             }
