--- a/src/stylesheets/layout/DarkMode.scss
+++ b/src/stylesheets/layout/DarkMode.scss
@@ -1,20 +1,22 @@
-.button-container{
-    padding: 0px;
-    margin-right: 40px;
+.button-container {
+  padding: 0px;
+  margin-right: 40px;
 
-.switch {
-    
+  .switch {
+
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
   }
+
   /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
+
   /* The slider */
   .slider {
     position: absolute;
@@ -27,6 +29,7 @@
     -webkit-transition: .4s;
     transition: .4s;
   }
+
   .slider:before {
     position: absolute;
     content: "";
@@ -38,22 +41,238 @@
     -webkit-transition: .4s;
     transition: .4s;
   }
-  input:checked + .slider {
-    background-color: #2196F3;
+
+  input:checked+.slider {
+    background-color: #005496;
   }
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+
+  input:focus+.slider {
+    box-shadow: 0 0 1px #005496;
   }
-  input:checked + .slider:before {
+
+  input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
+
   /* Rounded sliders */
   .slider.round {
     border-radius: 34px;
   }
+
   .slider.round:before {
     border-radius: 50%;
+  }
+}
+
+//ProfilePage
+
+.darkProfilePage {
+  height: 100vh;
+  width: 100vw;
+
+  .allPageHeader {
+    height: 110px;
+    width: 100vw;
+    background-color: #0A244D;
+
+    .page_header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .header-image-container {
+      background-color: #0A244D;
+    }
+  }
+}
+
+.darkProfilePageBody {
+  height: calc(100vh - 170px);
+  overflow: scroll;
+  width: 100%;
+  background: linear-gradient(to bottom, #081d3e, #0A244D 11%);
+
+  @include forTablet {
+    padding: 20px 40px;
+    display: grid;
+    grid-template-columns: 329px 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 30px;
+
+    .grid-1 {
+      background: transparent;
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+
+    .grid-2 {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      border-radius: 5px;
+    }
+  }
+
+  @include forPc {
+    grid-template-columns: 30vw 1fr;
+  }
+}
+
+.allPageFooter {
+  height: 60px;
+  width: 100vw;
+  background-color: #0A244D;
+  border-top: solid 1px $borderLineColor;
+}
+
+
+//Styles form box
+.formList {
+  height: 100%;
+  min-height: 457px;
+  width: 100%;
+
+  .form {
+    font-family: $mainText;
+    background: linear-gradient(to bottom, rgb(6, 22, 48), #0A244D 40%);
+    padding: 30px 27px;
+
+    a {
+      font-family: $mainText;
+      text-decoration: none;
+    }
+
+    .form__icon {
+      color: $secondaryColor;
+      margin-right: 10px;
+    }
+
+    .form__arrow--design,
+    .form__arrow--fill,
+    .form__arrow--share {
+      color: $primaryColor;
+      border: none;
+      background-color: transparent;
+      font-weight: lighter;
+      font-size: $mainTitleSize;
+    }
+
+    .form__arrow--collapse {
+      transform: rotate(180deg);
+    }
+
+    .form__title {
+      font-family: $mainText;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 18px;
+      color: $primaryColor;
+      margin: 10px 0;
+    }
+
+    .form__open {
+      padding-bottom: 20px;
+    }
+
+    .form__sections {
+      border-bottom: 1px solid $borderLineColor;
+    }
+  }
+}
+
+//Styles Preview box
+.darkCardPreview {
+  position: relative;
+  height: 100%;
+  min-height: 457px;
+  width: 100%;
+  background: linear-gradient(#005496, #032c4d);
+
+  &__centeredBox {
+    @include centerAll;
+
+    .previewResetButton {
+      width: 75px;
+      height: 30px;
+      background-color: transparent;
+      border: 1px solid $whiteColor;
+      border-radius: 15px;
+      font-family: $buttonFont;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 20px;
+      color: $previewTextColor;
+      margin-bottom: 20px;
+    }
+
+    .card {
+      width: 240px;
+      height: 329px;
+      background-color: white;
+      padding-top: 21px;
+      padding-bottom: 12px;
+      box-shadow: 0 1px 10px 0 $shadowColor;
+
+      .card__profileInfo--box {
+        width: 100%;
+        height: 42px;
+        padding-left: 15px;
+        margin-bottom: 10px;
+
+        .card__profileInfo--name {
+          font-family: $nameFont;
+          font-weight: 700;
+          font-size: 18px;
+          line-height: 20px;
+          margin-bottom: 2px;
+        }
+
+        .card__profileInfo--job {
+          font-family: $nameFont;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 20px;
+        }
+      }
+
+      .card__avatar--box {
+        width: 100%;
+        height: 200px;
+        background-color: $previewBackground2;
+        background-position: center;
+        background-size: cover;
+        margin-bottom: 10px;
+      }
+
+      .card__socialbuttons--list {
+        padding-left: 20px;
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+
+        .card__socialbuttons--box {
+          display: inline-block;
+          position: relative;
+          width: 32px;
+          height: 32px;
+          border-radius: 50%;
+          margin-right: 10px;
+
+          .hidden {
+            display: none;
+          }
+
+          .icon {
+            @include centerAll;
+            font-size: 18px;
+          }
+        }
+      }
+    }
   }
 }
