--- a/src/stylesheets/layout/DarkMode.scss
+++ b/src/stylesheets/layout/DarkMode.scss
@@ -119,66 +119,53 @@
     grid-template-columns: 30vw 1fr;
   }
 }
-
-.allPageFooter {
-  height: 60px;
-  width: 100vw;
-  background-color: #0A244D;
-  border-top: solid 1px $borderLineColor;
+.darkAllPageFooter{
+      background-color: #0A244D;
 }
 
 
-//Styles form box
-.formList {
-  height: 100%;
-  min-height: 457px;
-  width: 100%;
+.DarkcollapseTitle{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
 
-  .form {
-    font-family: $mainText;
-    background: linear-gradient(to bottom, rgb(6, 22, 48), #0A244D 40%);
-    padding: 30px 27px;
-
-    a {
-      font-family: $mainText;
-      text-decoration: none;
-    }
-
-    .form__icon {
-      color: $secondaryColor;
-      margin-right: 10px;
-    }
-
-    .form__arrow--design,
-    .form__arrow--fill,
-    .form__arrow--share {
-      color: $primaryColor;
-      border: none;
-      background-color: transparent;
-      font-weight: lighter;
-      font-size: $mainTitleSize;
-    }
-
-    .form__arrow--collapse {
-      transform: rotate(180deg);
-    }
-
-    .form__title {
+  .form__title {
       font-family: $mainText;
       font-weight: 600;
       text-transform: uppercase;
       font-size: 18px;
-      color: $primaryColor;
+      color: white;
       margin: 10px 0;
-    }
+  }
 
-    .form__open {
-      padding-bottom: 20px;
-    }
+  .form__arrow--collapse {
+      transform: rotate(180deg);
+  }
 
-    .form__sections {
-      border-bottom: 1px solid $borderLineColor;
-    }
+  .form__icon {
+      margin-right: 10px;
+      color:#b90082;
+
+  }
+
+  .form__arrow--design,
+  .form__arrow--fill,
+  .form__arrow--share {
+      color: white;
+      border: none;
+      background-color: transparent;
+      font-weight: lighter;
+      font-size: $mainTitleSize;
+  }
+}
+.rotate {
+
+  transform: rotate(180deg);
+  transition: all 0.1s ease 0.1s;
+
+  .Darkicon {
+      color: #b90082;
   }
 }
 
@@ -189,11 +176,12 @@
   min-height: 457px;
   width: 100%;
   background: linear-gradient(#005496, #032c4d);
-
+}
+.cardPreview{
   &__centeredBox {
     @include centerAll;
 
-    .previewResetButton {
+    .DarkpreviewResetButton{
       width: 75px;
       height: 30px;
       background-color: transparent;
@@ -204,7 +192,7 @@
       font-size: 12px;
       font-weight: 400;
       line-height: 20px;
-      color: $previewTextColor;
+      color: white;
       margin-bottom: 20px;
     }
 
@@ -275,4 +263,202 @@
       }
     }
   }
+}
+.Darkform__fill{
+  margin-bottom: 0px;
+    
+
+  label {
+      color: white;
+
+      span {
+          color: white;
+      }
+  }
+
+  ::placeholder {
+      color: $placeholderText;
+      padding: 5px;
+  }
+
+  input {
+      border: 1px solid #b90082;
+      margin: 10px 0 10px 0px;
+      height: 30px;
+      width: 100%;
+      
+
+  }
+  .form__flex {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    line-height: 20px;
+    
+}
+
+.photo__upload {
+    display: flex;
+    flex-direction: row;
+}
+.photo__upload--btn {
+  width: 140px;
+  height: 30px;
+  background-color: #b90082;
+  color: white;
+  font-family: $mainText;
+  font-size: 14px;
+  line-height: 0;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.20);
+  margin: 10px 0 20px;
+}
+
+.thumbnail {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #b90082;
+  box-sizing: border-box;
+  margin: 10px 0 0 20px;
+
+}
+} 
+
+.js__photo--file {
+
+width: 0.1px;
+height: 0.1px;
+opacity: 0;
+overflow: hidden;
+position: absolute;
+z-index: 100;
+}
+
+.Darktext-error{
+  color:#b90082;
+  padding-bottom: 25px;
+}
+.DarkpalettesContainer{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    & h3 {
+        
+        text-transform: uppercase;
+        color: white;
+        padding: 0;
+        padding-top: 0.75rem;
+        padding-left: 1.3125rem;
+        font-size: 0.875rem;
+        grid-column: 1/2;
+        font-family: $mainText;
+        font-style: inherit;
+       
+
+        @media all and (min-width: $tablet) {
+            padding-left: 0;
+        }
+    }
+    .paletteChoices {
+        grid-column: 2/3;
+        display: grid;
+        grid-template-columns: 30px 90px;
+        grid-template-rows: repeat(4, 1.5625rem 1.25rem);
+        justify-content: end;
+        padding-top: 0.9375rem;
+
+        .radio_button {
+            justify-self: center;
+            align-self: center;
+        }
+        .rb_one {
+            grid-column: 1/2;
+        }
+
+        .rb_two {
+            grid-row: 3;
+            grid-column: 1/2;
+        }
+
+        .rb_three {
+            grid-row: 5;
+            grid-column: 1/2;
+        }
+
+        .rb_four {
+            grid-row: 7;
+            grid-column: 1/2;
+        }
+
+        .palette-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 30px);
+            grid-template-rows: auto;
+            justify-content: end;
+            grid-column: 2/3;
+        }
+
+        .grid-one {
+            grid-row: 1;
+
+            .palOne_colOne {
+                background-color: $formText;
+            }
+
+            .palOne_colTwo {
+                background-color: $palete1Color2;
+            }
+
+            .palOne_colThree {
+                background-color: $borderColor;
+            }
+        }
+
+        .grid-two {
+            grid-row: 3;
+
+            .palTwo_colOne {
+                background-color: $palete2Color1;
+            }
+
+            .palTwo_colTwo {
+                background-color: $palete2Color2;
+            }
+
+            .palTwo_colThree {
+                background-color: $palete2Color3;
+            }
+        }
+        .grid-three {
+            grid-row: 5;
+
+            .palThree_colOne {
+                background-color: $palete3Color1;
+            }
+
+            .palThree_colTwo {
+                background-color: $palete3Color2;
+            }
+
+            .palThree_colThree {
+                background-color: $palete3Color3;
+            }
+        }
+
+        .grid-four {
+            grid-row: 7;
+
+            .palFour_colOne {
+                background-color: $palete4Color1;
+            }
+
+            .palFour_colTwo {
+                background-color: $palete4Color2;
+            }
+
+            .palFour_colThree {
+                background-color: $palete4Color3;
+            }
+        }
+    }
 }
