--- a/src/stylesheets/layout/ProfilePage.scss
+++ b/src/stylesheets/layout/ProfilePage.scss
@@ -21,7 +21,7 @@ $nameFont: $previewText;
 
     .profilePageBody {
         height: calc(100vh - 170px);
-        overflow: scroll;
+        /* overflow: scroll; */
         width: 100%;
         background: linear-gradient(to bottom, #f5f5f5, #ffffff 11%);
 
@@ -55,6 +55,10 @@ $nameFont: $previewText;
         width: 100vw;
         background-color: #ffffff;
         border-top: solid 1px $borderLineColor;
+        margin-top:240px;
+        @include forTablet{
+            margin-top:0px;
+        }
     }
 }
 
