--- a/src/stylesheets/layout/DarkMode.scss
+++ b/src/stylesheets/layout/DarkMode.scss
@@ -462,3 +462,112 @@ z-index: 100;
         }
     }
 }
+
+// Share
+
+.create-card-button-container {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+
+  .Darkcreate-card-button {
+    width: 200px;
+    height: 50px;
+    background-color: #B90082;
+    color: white;
+    border-radius: 12px;
+
+    &:hover {
+      color: #B90082;
+      background-color: white;
+
+      p {
+        color: #B90082;
+      }
+
+      i {
+        color: #B90082;
+      }
+
+    }
+
+    p {
+      text-transform: uppercase;
+      font-family: $mainText;
+      font-weight: 500;
+      text-decoration: none;
+      color: white;
+
+      i {
+        color: white;
+        margin-right: 10px;
+      }
+
+    }
+  }
+
+  .create-card-button:disabled {
+    background: grey !important;
+    pointer-events: none;
+  }
+
+}
+
+//Twitter button
+
+.Darkcreated-container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 20px 0 30px 0;
+  border-top: 1px solid $borderLineColor;
+
+  p {
+    padding: 5px 0;
+    font-size: 18px;
+    color: $primaryColor;
+    font-family: $mainText;
+  }
+
+  a {
+    display: block;
+    color: #B90082;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    font-family: $mainText;
+    font-size: 12px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .share-twitter-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: inline-block;
+    background-color: #00a0f5;
+    color: white;
+    border-radius: 3px;
+    width: 180px;
+    height: 30px;
+    margin: 0 auto 0 auto;
+    border: 0;
+    font-family: $mainText;
+    font-weight: normal;
+    font-size: 14px;
+
+    .fab {
+      margin-right: 5px;
+      font-size: $mainTitleSize;
+    }
+
+
+  }
+}
