--- a/src/stylesheets/layout/DarkMode.scss
+++ b/src/stylesheets/layout/DarkMode.scss
@@ -70,11 +70,11 @@
 
 .darkProfilePage {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 
   .allPageHeader {
     height: 110px;
-    width: 100vw;
+    width: 100%;
     background-color: #0A244D;
 
     .page_header {
