--- a/src/stylesheets/layout/Header.scss
+++ b/src/stylesheets/layout/Header.scss
@@ -5,7 +5,7 @@
 .header-image-container {
     width: 100%;
     height: auto;
-    margin: auto;
+    margin: 0;
     background: white;
     display: flex;
     justify-content: center;
