repair bug button

--- a/src/stylesheets/layout/DarkMode.scss
+++ b/src/stylesheets/layout/DarkMode.scss
@@ -576,7 +576,7 @@
       }
     }
   
-    .create-card-button:disabled {
+    .Darkcreate-card-button:disabled {
       background: grey !important;
       pointer-events: none;
     }
