--- a/src/stylesheets/layout/Footer.scss
+++ b/src/stylesheets/layout/Footer.scss
@@ -24,6 +24,9 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            @include forTablet{
+                margin-top:40px;
+            }
 
             img {
                 width: 30px;
@@ -33,7 +36,9 @@
 
         .footer-logo-container{
             margin:auto;
-
+            @include forTablet{
+                margin-top:30px;
+            }
                 img{
                     width:103px;
                     height: 40px;
